Cosmetics: Made permission names unique PLAT-1029 #time 30m

--- a/deployment/permissions/partner.-2.ini
+++ b/deployment/permissions/partner.-2.ini
@@ -164,7 +164,7 @@ permission147.partnerGroup =
 permission148.partnerId = -2
 permission148.type = 1
 permission148.name = SYSTEM_ADMIN_BATCH_CONTROL
-permission148.friendlyName = "Base system admin permission"
+permission148.friendlyName = "Batch Control tab"
 permission148.description = ""
 permission148.dependsOnPermissionNames = 
 permission148.tags = 
@@ -173,7 +173,7 @@ permission148.partnerGroup =
 permission149.partnerId = -2
 permission149.type = 1
 permission149.name = SYSTEM_ADMIN_BATCH_CONTROL_FAILED
-permission149.friendlyName = "Base system admin permission"
+permission149.friendlyName = "Batch Control failed"
 permission149.description = ""
 permission149.dependsOnPermissionNames = 
 permission149.tags = 
@@ -182,7 +182,7 @@ permission149.partnerGroup =
 permission150.partnerId = -2
 permission150.type = 1
 permission150.name = SYSTEM_ADMIN_BATCH_CONTROL_INPROGRESS
-permission150.friendlyName = "Base system admin permission"
+permission150.friendlyName = "Batch Control in-progress"
 permission150.description = ""
 permission150.dependsOnPermissionNames = 
 permission150.tags = 
@@ -191,7 +191,7 @@ permission150.partnerGroup =
 permission151.partnerId = -2
 permission151.type = 1
 permission151.name = SYSTEM_ADMIN_BATCH_CONTROL_SETUP
-permission151.friendlyName = "Base system admin permission"
+permission151.friendlyName = "Batch Control setup"
 permission151.description = ""
 permission151.dependsOnPermissionNames = 
 permission151.tags = 
@@ -200,7 +200,7 @@ permission151.partnerGroup =
 permission152.partnerId = -2
 permission152.type = 1
 permission152.name = SYSTEM_ADMIN_CONTENT_DISTRIBUTION_BASE
-permission152.friendlyName = "Base system admin permission"
+permission152.friendlyName = "Base content distribution"
 permission152.description = ""
 permission152.dependsOnPermissionNames = 
 permission152.tags = 
@@ -209,7 +209,7 @@ permission152.partnerGroup =
 permission153.partnerId = -2
 permission153.type = 1
 permission153.name = SYSTEM_ADMIN_CONTENT_DISTRIBUTION_MODIFY
-permission153.friendlyName = "Base system admin permission"
+permission153.friendlyName = "Modify content distribution"
 permission153.description = ""
 permission153.dependsOnPermissionNames = 
 permission153.tags = 
@@ -218,7 +218,7 @@ permission153.partnerGroup =
 permission154.partnerId = -2
 permission154.type = 1
 permission154.name = SYSTEM_ADMIN_DEVELOPERS_TAB
-permission154.friendlyName = "Base system admin permission"
+permission154.friendlyName = "Developers tab"
 permission154.description = ""
 permission154.dependsOnPermissionNames = 
 permission154.tags = 
@@ -227,7 +227,7 @@ permission154.partnerGroup =
 permission155.partnerId = -2
 permission155.type = 1
 permission155.name = SYSTEM_ADMIN_EMAIL_INGESTION
-permission155.friendlyName = "Base system admin permission"
+permission155.friendlyName = "E-Mail Integration"
 permission155.description = ""
 permission155.dependsOnPermissionNames = 
 permission155.tags = 
@@ -254,7 +254,7 @@ permission157.partnerGroup =
 permission158.partnerId = -2
 permission158.type = 1
 permission158.name = SYSTEM_ADMIN_MP_REDIRECT
-permission158.friendlyName = "Base system admin permission"
+permission158.friendlyName = "Multi-Publisher console access"
 permission158.description = ""
 permission158.dependsOnPermissionNames = 
 permission158.tags = 
@@ -272,7 +272,7 @@ permission159.partnerGroup =
 permission160.partnerId = -2
 permission160.type = 1
 permission160.name = SYSTEM_ADMIN_PERMISSIONS_MANAGE
-permission160.friendlyName = "Base system admin permission"
+permission160.friendlyName = "Manage permissions"
 permission160.description = ""
 permission160.dependsOnPermissionNames = 
 permission160.tags = 
@@ -281,7 +281,7 @@ permission160.partnerGroup =
 permission161.partnerId = -2
 permission161.type = 1
 permission161.name = SYSTEM_ADMIN_PUBLISHER_ADD
-permission161.friendlyName = "Base system admin permission"
+permission161.friendlyName = "Publisher add"
 permission161.description = ""
 permission161.dependsOnPermissionNames = 
 permission161.tags = 
@@ -290,7 +290,7 @@ permission161.partnerGroup =
 permission162.partnerId = -2
 permission162.type = 1
 permission162.name = SYSTEM_ADMIN_PUBLISHER_BASE
-permission162.friendlyName = "Base system admin permission"
+permission162.friendlyName = "Base publisher permission"
 permission162.description = ""
 permission162.dependsOnPermissionNames = 
 permission162.tags = 
@@ -299,7 +299,7 @@ permission162.partnerGroup =
 permission163.partnerId = -2
 permission163.type = 1
 permission163.name = SYSTEM_ADMIN_PUBLISHER_BLOCK
-permission163.friendlyName = "Base system admin permission"
+permission163.friendlyName = "Publisher block and unblock"
 permission163.description = ""
 permission163.dependsOnPermissionNames = 
 permission163.tags = 
@@ -308,7 +308,7 @@ permission163.partnerGroup =
 permission164.partnerId = -2
 permission164.type = 1
 permission164.name = SYSTEM_ADMIN_PUBLISHER_CONFIG
-permission164.friendlyName = "Base system admin permission"
+permission164.friendlyName = "Publisher configure"
 permission164.description = ""
 permission164.dependsOnPermissionNames = 
 permission164.tags = 
@@ -317,7 +317,7 @@ permission164.partnerGroup =
 permission165.partnerId = -2
 permission165.type = 1
 permission165.name = SYSTEM_ADMIN_PUBLISHER_KMC_ACCESS
-permission165.friendlyName = "Base system admin permission"
+permission165.friendlyName = "Publisher KMC access"
 permission165.description = ""
 permission165.dependsOnPermissionNames = 
 permission165.tags = 
@@ -335,7 +335,7 @@ permission166.partnerGroup =
 permission167.partnerId = -2
 permission167.type = 1
 permission167.name = SYSTEM_ADMIN_PUBLISHER_REMOVE
-permission167.friendlyName = "Base system admin permission"
+permission167.friendlyName = "Publisher remove"
 permission167.description = ""
 permission167.dependsOnPermissionNames = 
 permission167.tags = 
@@ -353,7 +353,7 @@ permission168.partnerGroup =
 permission169.partnerId = -2
 permission169.type = 1
 permission169.name = SYSTEM_ADMIN_PUBLISHER_USAGE
-permission169.friendlyName = "Base system admin permission"
+permission169.friendlyName = "Publisher usage"
 permission169.description = ""
 permission169.dependsOnPermissionNames = 
 permission169.tags = 
@@ -380,7 +380,7 @@ permission171.partnerGroup =
 permission172.partnerId = -2
 permission172.type = 1
 permission172.name = SYSTEM_ADMIN_STORAGE
-permission172.friendlyName = "Base system admin permission"
+permission172.friendlyName = "Storage"
 permission172.description = ""
 permission172.dependsOnPermissionNames = 
 permission172.tags = 
@@ -389,7 +389,7 @@ permission172.partnerGroup =
 permission173.partnerId = -2
 permission173.type = 1
 permission173.name = SYSTEM_ADMIN_SYSTEM_MONITOR
-permission173.friendlyName = "Base system admin permission"
+permission173.friendlyName = "System monitor"
 permission173.description = ""
 permission173.dependsOnPermissionNames = 
 permission173.tags = 
@@ -398,7 +398,7 @@ permission173.partnerGroup =
 permission174.partnerId = -2
 permission174.type = 1
 permission174.name = SYSTEM_ADMIN_USER_MANAGE
-permission174.friendlyName = "Base system admin permission"
+permission174.friendlyName = "Manage users"
 permission174.description = ""
 permission174.dependsOnPermissionNames = 
 permission174.tags = 
@@ -407,7 +407,7 @@ permission174.partnerGroup =
 permission175.partnerId = -2
 permission175.type = 1
 permission175.name = SYSTEM_ADMIN_VIRUS_SCAN
-permission175.friendlyName = "Base system admin permission"
+permission175.friendlyName = "Virus-Scan"
 permission175.description = ""
 permission175.dependsOnPermissionNames = 
 permission175.tags = 
