--- a/deployment/permissions/service.livestream.ini
+++ b/deployment/permissions/service.livestream.ini
@@ -101,3 +101,14 @@ permissionItem14.service = livestream
 permissionItem14.action = createPeriodicSyncPoints
 permissionItem14.partnerId = 0
 permissionItem14.permissions = LIVE_STREAM_CREATE_SYNC_POINTS
+
+permissionItem15.service = livestream
+permissionItem15.action = addLiveStreamPushPublishConfiguration
+permissionItem15.partnerId = 0
+permissionItem15.permissions = PUSH_PUBLISH_PERMISSION
+
+permissionItem16.service = livestream
+permissionItem16.action = removeLiveStreamPushPublishConfiguration
+permissionItem16.partnerId = 0
+permissionItem16.permissions = PUSH_PUBLISH_PERMISSION
+
