Added Batch proc. permission to filesync_filesync.list PLAT-810 #time 10m
Conflicts:

	release-notes.md

--- a/deployment/permissions/service.filesync.filesync.ini
+++ b/deployment/permissions/service.filesync.filesync.ini
@@ -21,3 +21,8 @@ permissionItem3.service = filesync_filesync
 permissionItem3.action = list
 permissionItem3.partnerId = -5
 permissionItem3.permissions = PARTNER_-5_GROUP_*_PERMISSION
+
+permissionItem4.service = filesync_filesync
+permissionItem4.action = list
+permissionItem4.partnerId = -1
+permissionItem4.permissions = BATCH_BASE, PARTNER_-1_GROUP_*_PERMISSION
