Fixes for the media server client

--- a/plugins/file_sync/config/generator.ini
+++ b/plugins/file_sync/config/generator.ini
@@ -5,6 +5,9 @@ exclude = fileSync_fileSync.*
 [batchClient]
 include = fileSync_fileSync.sync
 
+[mediaServerClient]
+include = filesync_filesync.list
+
 [as3FlexClient]
 exclude = fileSync_fileSync.*
 
