Recognize m4a and m4v file type automatically

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -238,6 +238,7 @@ video_file_ext[]=ts
 video_file_ext[]=rm
 video_file_ext[]=arf
 video_file_ext[]=webm
+video_file_ext[]=m4v
 
 image_file_ext[]=jpg
 image_file_ext[]=jpeg
@@ -261,6 +262,7 @@ audio_file_ext[]=wma
 audio_file_ext[]=3gp
 audio_file_ext[]=vob
 audio_file_ext[]=amr
+audio_file_ext[]=m4a
 
 hls_live_stream_content_type[]=application/vnd.apple.mpegurl 
 hls_live_stream_content_type[]=application/x-mpegURL
