--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -58,7 +58,7 @@ ignore = KalturaUploadedFileResource, KalturaCopyJobData
 generateDocs = true
 
 [mediaServerClient : java]
-include = session.start, livestream.*, mediaserver.*, flavorasset.*, flavorparams.*, conversionprofile.*, media.add, media.addcontent, media.get, media.updatecontent,media.approvereplace, media.cancelreplace, media.list, uploadtoken.*, partner.getinfo, partner.getusage, baseentry.count, baseentry.update, conversionprofileassetparams.*, playlist.execute, livechannel.*
+include = session.start, livestream.*, mediaserver.*, flavorasset.*, flavorparams.*, conversionprofile.*, media.add, media.addcontent, media.get, media.updatecontent,media.approvereplace, media.cancelreplace, media.list, uploadtoken.*, partner.getinfo, partner.getusage, baseentry.count, baseentry.update, conversionprofileassetparams.*, playlist.execute, livechannel.*, cuePoint_cuePoint.*
 ignore = KalturaIndexJobData, KalturaCopyJobData, KalturaUploadedFileResource, KalturaDeleteJobData
 excludeSourcePaths = src/com/kaltura/client/test,src/Kaltura.java
 internal = true
