adding support for .lxf files
SUP-1724 #1.5d

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -238,6 +238,7 @@ video_file_ext[]=ts
 video_file_ext[]=rm
 video_file_ext[]=arf
 video_file_ext[]=webm
+video_file_ext[]=lxf
 
 image_file_ext[]=jpg
 image_file_ext[]=jpeg
