--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -197,7 +197,7 @@ default_live_stream_entry_source_type = EntrySourceType::AKAMAI_LIVE
 short_entries_max_duration = 300
 short_entries_default_delivery_type = http
 secured_default_delivery_type = hds
-default_delivery_type = akamai,hds
+default_delivery_type = akamai
 
 template_partner_custom_data_exclude_fields[] = defConversionProfileType
 template_partner_custom_data_exclude_fields[] = defaultAccessControlId
