cache MUST_FILTER_ON_OBJECT_ID errors conditionally

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -17,6 +17,7 @@ v3cache_conditional_cached_errors[] = SERVICE_FORBIDDEN
 v3cache_conditional_cached_errors[] = FLAVOR_ASSET_IS_NOT_READY
 v3cache_conditional_cached_errors[] = MISSING_MANDATORY_PARAMETER
 v3cache_conditional_cached_errors[] = INVALID_UI_CONF_ID
+v3cache_conditional_cached_errors[] = MUST_FILTER_ON_OBJECT_ID
 
 remote_addr_whitelisted_hosts[] = false 
 
