Cosmetics PLAT-849 #time 1m

--- a/configurations/batch/batch.ini.template
+++ b/configurations/batch/batch.ini.template
@@ -704,5 +704,7 @@ type												= KAsyncEntryStatistics
 sleepBetweenStopStart								= 86400
 maximumExecutionTime								= 10800
 scriptPath											= batches/EntryStatistics/KAsyncEntryStatisticsExe.php
-;Additional script params may be added in the following format
-;params.key											= value
+;params.dbHost                                      =
+;params.dbPort                                      =
+;params.dbName                                      =
+;params.dbTableName                                 =
