Support play-server URL

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -680,6 +680,14 @@ moduls.blockThumbnailCapture.basePermissionType =
 moduls.blockThumbnailCapture.basePermissionName =
 moduls.blockThumbnailCapture.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.enablePlayServer.enabled = true
+moduls.enablePlayServer.permissionType = 2
+moduls.enablePlayServer.label = Enable Play-Server
+moduls.enablePlayServer.permissionName = FEATURE_PLAY_SERVER
+moduls.enablePlayServer.basePermissionType =
+moduls.enablePlayServer.basePermissionName =
+moduls.enablePlayServer.group = GROUP_ENABLE_DISABLE_FEATURES
+
 ; ACCESS PERMISSIONS
 
 access.error = *
