--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -153,4 +153,4 @@ nopackage = true
 copyPath = tests/lib
 
 [nodePlayServer : node]
-include = cuePoint_cuePoint.list, session.start
+include = cuePoint_cuePoint.list, cuePoint_cuePoint.add, liveStream.get, liveStream.createPeriodicSyncPoints, session.start
