--- a/configurations/local.template.ini
+++ b/configurations/local.template.ini
@@ -11,6 +11,7 @@ cdn_host_https = @CDN_HOST@
 iis_host = @IIS_HOST@
 www_host = @WWW_HOST@
 rtmp_url = @RTMP_URL@
+play_server_host = @WWW_HOST@
 
 ;CDN URLs
 cdn_api_host = @WWW_HOST@
