1. Reading optional session options from admin.ini 2. Preventing javascript from accessing session cookies (cookie_httponly) 3. Setting cookie_secure flag for HTTPS requests 4. Regenerating session ID upon authentication for security reasons PLAT-1082 #time 6h

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -46,6 +46,12 @@ settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::KSR
 ; disable KCW visual editor for on-prem/ce (editor is enabled if property is true or missing)
 settings.enableKCWVisualEditor = false;
 
+; Zend_Session options
+settings.sessionOptions.cookie_httponly = true
+
+; Force 'cookie_secure = true' upon HTTPS requests
+settings.secure_cookie_upon_https = true
+
 ;settings.clientConfig.verifySSL = false
 
 languages.english.name = "English";
