--- a/configurations/players.ini
+++ b/configurations/players.ini
@@ -19,27 +19,37 @@ legacy.label = "Legacy Flash Embed"
 auto.label = "Kaltura Auto"
 auto.streamerType = auto
 auto.minVersion = v3.6.14
+auto.enabledByDefault = true
 
 http.label = "HTTP Progressive Download"
+http.enabledByDefault = true
 
 akamai.label = "HTTP Streaming (Akamai)"
 akamai.streamerType = hdnetwork
 akamai.flashvars.akamaiHD.loadingPolicy = preInitialize
 akamai.flashvars.akamaiHD.asyncInit = "true"
+akamai.enabledByDefault = true
 
 hds.label = "HTTP Streaming (HDS)"
 hds.streamerType = hdnetworkmanifest
 hds.flashvars.akamaiHD.loadingPolicy = preInitialize
 hds.flashvars.akamaiHD.asyncInit = "true"
 hds.flashvars.twoPhaseManifest = "true"
+hds.enabledByDefault = true
 
 rtmp.label = "RTMP Streaming"
 rtmp.streamerType = rtmp
 rtmp.mediaProtocol = rtmp
+rtmp.enabledByDefault = true
 
 rtmpe.label = "Secure Transport (RTMPE)"
 rtmpe.streamerType = rtmp
 rtmpe.mediaProtocol = rtmpe
+rtmpe.enabledByDefault = true
+
+hdsstandart.label = "HTTP Streaming (Standart HDS)"
+hdsstandart.streamerType = hds
+hdsstandart.enabledByDefault = false
 
 [forced_delivery_types]
 widevine = http
