Fixed upload_tmp_dir path

--- a/configurations/php/kaltura.template.ini
+++ b/configurations/php/kaltura.template.ini
@@ -1,6 +1,6 @@
 apc.shm_size = 256M
 memory_limit = 256M
-upload_tmp_dir = "@WEB_DIR@/tmp"
+upload_tmp_dir = "@WEB_DIR@/content/uploads"
 request_order = "CGP"
 display_errors = 0
 max_execution_time = 60
