Cosmetics PLAT-1082 #time 5m

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -10,7 +10,6 @@ settings.timeZone = @TIME_ZONE@
 settings.curlTimeout = 90;
 settings.partnerId = -2
 settings.applicationName = admin
-settings.cookieNameSpace = Zend_Auth_AdminConsole
 settings.pluginInterface = IKalturaAdminConsolePages
 settings.mpConsoleUrl = ma_console/index.php/user/admin-login
 
@@ -46,11 +45,10 @@ settings.uiConfTypes[] = Kaltura_Client_Enum_UiConfObjType::KSR
 ; disable KCW visual editor for on-prem/ce (editor is enabled if property is true or missing)
 settings.enableKCWVisualEditor = false;
 
-; Zend_Session options
-settings.sessionOptions.cookie_httponly = true
-
-; Force 'cookie_secure = true' upon HTTPS requests
+; cookie options
+settings.cookieNameSpace = Zend_Auth_AdminConsole
 settings.secure_cookie_upon_https = true
+settings.sessionOptions.cookie_httponly = true
 
 ;settings.clientConfig.verifySSL = false
 
