--- a/deployment/base/scripts/init_data/04.liveParams.ini
+++ b/deployment/base/scripts/init_data/04.liveParams.ini
@@ -62,7 +62,7 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
-requiredPermissions = FEATURE_LIVE_STREAM
+requiredPermissions = FEATURE_LIVE_STREAM, FEATURE_KALTURA_LIVE_STREAM_TRANSCODE
 
 
 
@@ -98,7 +98,7 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
-requiredPermissions = FEATURE_LIVE_STREAM
+requiredPermissions = FEATURE_LIVE_STREAM, FEATURE_KALTURA_LIVE_STREAM_TRANSCODE
 
 
 
@@ -134,7 +134,7 @@ deinterlice=0
 rotate=0
 engineVersion=0
 type=3
-requiredPermissions = FEATURE_LIVE_STREAM
+requiredPermissions = FEATURE_LIVE_STREAM, FEATURE_KALTURA_LIVE_STREAM_TRANSCODE
 
 
 [ingest_2]
