add playready analytics log

--- a/configurations/logger.template.ini
+++ b/configurations/logger.template.ini
@@ -55,6 +55,15 @@ writers.tests.filters.priority.operator = "<="
 writers.tests.filters.type.name = KalturaLogFilterType
 writers.tests.filters.type.type = LOG_TYPE_TESTS
 
+writers.playready_analytics.stream = @LOG_DIR@/kaltura_api_v3_playready_analytics.log
+writers.playready_analytics.name = Zend_Log_Writer_Stream
+writers.playready_analytics.formatters.simple.name = Zend_Log_Formatter_Simple
+writers.playready_analytics.formatters.simple.format = "%timestamp% [%logIp%] [%uniqueId%]: %message%" 
+writers.playready_analytics.filters.priority.name = Zend_Log_Filter_Priority
+writers.playready_analytics.filters.priority.priority = 7
+writers.playready_analytics.filters.priority.operator = "<="
+writers.playready_analytics.filters.type.name = KalturaLogFilterType
+writers.playready_analytics.filters.type.type = LOG_TYPE_PLAYREADY_ANALYTICS
 
 [admin : all]
 writers.stream.stream = @LOG_DIR@/kaltura_admin.log
