the testClient is used by monitoring. Monitoring also monitors batch so, needs these libs to be there for things like this one to work: php /opt/kaltura/app/plugins/monitor/nagios/exec.php --warning-threshold 10 --error-threshold 11 --script "/opt/kaltura/app/tests/monitoring/api_v3/getBatchQueueSize.php --service-url ip-10-152-199-214 --job-type CONVERT "

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -199,3 +199,4 @@ additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionE
 internal = true
 nopackage = true
 copyPath = tests/lib
+include = session.start, batch.*, batchcontrol.*, jobs.*
