while the last change solves the original problem, using the include directive will cause the client lib to include ONLY the services in the list, that will cause other tests to fail. so, instead, override the default exclude as defined in  15 [all]  16 exclude = batch.*, batchcontrol.*, jobs.*, media.addfrombulk  17

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -199,4 +199,11 @@ additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionE
 internal = true
 nopackage = true
 copyPath = tests/lib
-include = session.start, batch.*, batchcontrol.*, jobs.*
+
+[testsClient : php5]
+additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionEngineType, KalturaExportProtocol, KalturaSchemaType, KalturaIndexObjectType, KalturaDeleteObjectType, KalturaCopyObjectType
+internal = true
+nopackage = true
+copyPath = tests/lib
+exclude = media.addfrombulk
+
