--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -127,6 +127,14 @@ moduls.kalturaLiveStream.basePermissionType = 2
 moduls.kalturaLiveStream.basePermissionName = FEATURE_LIVE_STREAM
 moduls.kalturaLiveStream.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.kalturaLiveStreamTranscode.enabled = true
+moduls.kalturaLiveStreamTranscode.permissionType = 2
+moduls.kalturaLiveStreamTranscode.label = Kaltura Live Streams Plus
+moduls.kalturaLiveStreamTranscode.permissionName = FEATURE_KALTURA_LIVE_STREAM_TRANSCODE
+moduls.kalturaLiveStreamTranscode.basePermissionType = 2
+moduls.kalturaLiveStreamTranscode.basePermissionName = FEATURE_KALTURA_LIVE_STREAM
+moduls.kalturaLiveStreamTranscode.group = GROUP_ENABLE_DISABLE_FEATURES
+
 moduls.liveChannel.enabled = true
 moduls.liveChannel.permissionType = 2
 moduls.liveChannel.label = Live Channel
