Separate Admin Console permissions for Block/Unblock/Change Role/Remove users PLAT-1252 #time 3h

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -734,9 +734,9 @@ access.partner.manage-template-partners = SYSTEM_ADMIN_MANAGE_TEMPLATE_PARTNERS
 access.partner-usage.all = SYSTEM_ADMIN_PUBLISHER_USAGE
 
 access.user.all = ADMIN_BASE,SYSTEM_ADMIN_USER_MANAGE
-access.user.block = ADMIN_USER_UPDATE
-access.user.unblock = ADMIN_USER_UPDATE
-access.user.change-role = ADMIN_USER_UPDATE
+access.user.block = ADMIN_USER_UPDATE,ADMIN_USER_BLOCK_UNBLOCK
+access.user.unblock = ADMIN_USER_UPDATE,ADMIN_USER_BLOCK_UNBLOCK
+access.user.change-role = ADMIN_USER_UPDATE,ADMIN_USER_CHANGE_ROLE
 access.user.create = ADMIN_USER_ADD
 access.user.remove = ADMIN_USER_DELETE
 access.user.settings = ADMIN_BASE,SYSTEM_ADMIN_USER_MANAGE
