--- a/deployment/permissions/partner.-2.ini
+++ b/deployment/permissions/partner.-2.ini
@@ -489,3 +489,30 @@ permission188.description = "Permission to access secured play ready configurati
 permission188.dependsOnPermissionNames = 
 permission188.tags = 
 permission188.partnerGroup = 
+
+permission190.partnerId = -2
+permission190.type = 1
+permission190.name = ADMIN_USER_BLOCK_UNBLOCK
+permission190.friendlyName = "System admin block/unblock users"
+permission190.description = "Permission to block/unblock users"
+permission190.dependsOnPermissionNames = 
+permission190.tags = 
+permission190.partnerGroup = 
+
+permission191.partnerId = -2
+permission191.type = 1
+permission191.name = ADMIN_USER_DELETE
+permission191.friendlyName = "System admin remove users"
+permission191.description = "Permission to remove users"
+permission191.dependsOnPermissionNames = 
+permission191.tags = 
+permission191.partnerGroup = 
+
+permission192.partnerId = -2
+permission192.type = 1
+permission192.name = ADMIN_USER_CHANGE_ROLE
+permission192.friendlyName = "System admin change user roles"
+permission192.description = "Permission to change user roles"
+permission192.dependsOnPermissionNames = 
+permission192.tags = 
+permission192.partnerGroup = 
