--- a/deployment/permissions/service.user.ini
+++ b/deployment/permissions/service.user.ini
@@ -15,7 +15,7 @@ permissionItem2.param3 =
 permissionItem2.param4 = 
 permissionItem2.param5 = 
 permissionItem2.tags = 
-permissionItem2.permissions = ADMIN_USER_DELETE, -1>PARTNER_-1_GROUP_*_PERMISSION
+permissionItem2.permissions = ADMIN_USER_DELETE, -1>PARTNER_-1_GROUP_*_PERMISSION, -2>ADMIN_USER_DELETE
 
 permissionItem3.service = user
 permissionItem3.action = disablelogin
@@ -42,7 +42,7 @@ permissionItem5.param3 =
 permissionItem5.param4 = 
 permissionItem5.param5 = 
 permissionItem5.tags = 
-permissionItem5.permissions = ADMIN_BASE, KMC_READ_ONLY, -1>PARTNER_-1_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_BASE
+permissionItem5.permissions = ADMIN_BASE, KMC_READ_ONLY, -1>PARTNER_-1_GROUP_*_PERMISSION, -2>SYSTEM_ADMIN_BASE, -2>ADMIN_USER_CHANGE_ROLE
 
 permissionItem6.service = user
 permissionItem6.action = getbyloginid
@@ -114,7 +114,7 @@ permissionItem13.param3 =
 permissionItem13.param4 = 
 permissionItem13.param5 = 
 permissionItem13.tags = 
-permissionItem13.permissions = ADMIN_USER_UPDATE, -2>ADMIN_USER_ASSIGN_PARNTERS, -1>PARTNER_-1_GROUP_*_PERMISSION
+permissionItem13.permissions = ADMIN_USER_UPDATE, -2>ADMIN_USER_ASSIGN_PARNTERS, -1>PARTNER_-1_GROUP_*_PERMISSION, -2>ADMIN_USER_BLOCK_UNBLOCK, -2>ADMIN_USER_CHANGE_ROLE
 
 permissionItem14.service = user
 permissionItem14.action = updatelogindata
