adminSecret is searched for under 'session' and not the 'adminConsoleSession' section. added missing directive for partnerId. added additional directive to point to the kitchen script as it can reside in alt locations.

--- a/tests/sanity/lib/config.template.ini
+++ b/tests/sanity/lib/config.template.ini
@@ -24,9 +24,13 @@ verifySSL 					= false
 [dwh]
 baseDir						= @DWH_DIR@
 logRotateBin				= @LOG_ROTATE_BIN@
+kitchenScript                           = @KITCHEN_BIN@
 
-[adminConsoleSession]
+
+[session]
+partnerId                                       = @PARTNER_ID@
 adminSecret					= @ADMIN_CONSOLE_PARTNER_ADMIN_SECRET@
+
 
 [os]
 kalturaUser					= @OS_KALTURA_USER@
