place holder name corrected. The partnerId admin_secret is required, not -2's as the place holder would imply.

--- a/tests/sanity/lib/config.template.ini
+++ b/tests/sanity/lib/config.template.ini
@@ -29,7 +29,7 @@ kitchenScript                           = @KITCHEN_BIN@
 
 [session]
 partnerId                                       = @PARTNER_ID@
-adminSecret					= @ADMIN_CONSOLE_PARTNER_ADMIN_SECRET@
+adminSecret					= @PARTNER_ADMIN_SECRET@
 
 
 [os]
