--- a/tests/sanity/lib/config.template.ini
+++ b/tests/sanity/lib/config.template.ini
@@ -26,6 +26,10 @@ baseDir						= @DWH_DIR@
 logRotateBin				= @LOG_ROTATE_BIN@
 kitchenScript                           = @KITCHEN_BIN@
 
+[adminConsoleSession]
+partnerId				= @ADMIN_CONSOLE_PARTNER_ID@
+adminSecret                             = @ADMIN_CONSOLE_PARTNER_ADMIN_SECRET@
+
 
 [session]
 partnerId                                       = @PARTNER_ID@
