the /opt/kaltura/app/configurations/cron/dwh has: 59 0,4,8,12,16,20 * * * kaltura /opt/kaltura/dwh/etlsource/execute/etl_daily.sh -p /opt/kaltura/dwh
However, logrotate currently has %Y%m%d. This means daily will not pick
it up every 4 hours, because it skips files it already processed
previously. Added the hour to file name.

--- a/configurations/logrotate/kaltura_apache.template
+++ b/configurations/logrotate/kaltura_apache.template
@@ -19,7 +19,7 @@
  dateext
  notifempty
  lastaction
- mv @LOG_DIR@/kaltura_apache_access.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access.log-`/bin/date +%Y%m%d`.gz
+ mv @LOG_DIR@/kaltura_apache_access.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access.log-`/bin/date +%Y%m%d-%H`.gz
  service @APACHE_SERVICE@ reload
  endscript
 }
@@ -45,7 +45,7 @@
  dateext
  notifempty
  lastaction
- mv @LOG_DIR@/kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d`.gz
+ mv @LOG_DIR@/kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d`.gz @EVENTS_LOGS_DIR@/`hostname`-kaltura_apache_access_ssl.log-`/bin/date +%Y%m%d-%H`.gz
  service @APACHE_SERVICE@ reload
  endscript
 }
