Enable cue-points feature to media-server partner

--- a/deployment/permissions/partner.-5.ini
+++ b/deployment/permissions/partner.-5.ini
@@ -16,3 +16,7 @@ permission3.partnerId = -5
 permission3.type = 2
 permission3.name = FEATURE_LIVE_STREAM
 
+permission4.partnerId = -5
+permission4.type = 2
+permission4.name = CUEPOINT_PLUGIN_PERMISSION
+
