added missing batch libs.

--- a/configurations/generator.ini
+++ b/configurations/generator.ini
@@ -192,6 +192,7 @@ subpackage = Client
 internal = true
 nopackage = true
 
+; added missing batch libs
 [testsClient : php5]
 additional = KalturaBatchJobAppErrors, KalturaBulkUploadType, KalturaConversionEngineType, KalturaExportProtocol, KalturaSchemaType, KalturaIndexObjectType, KalturaDeleteObjectType, KalturaCopyObjectType
 internal = true
