--- a/deployment/base/scripts/init_data/03.uiConf.ini
+++ b/deployment/base/scripts/init_data/03.uiConf.ini
@@ -1929,3 +1929,36 @@ creationMode=3
 confFile=@ui_conf/8776542.xml
 confFileFeatures=@ui_conf/8776542.features.xml
 
+
+[8776542]
+id=8776542
+objType=8
+partnerId=0
+name="hovering controllers"
+width=400
+height=100
+swfUrl=/flash/kdp3/v3.8/kdp3.swf
+html5Url=/html5/html5lib/v1.8.2/mwEmbedLoader.php
+useCdn=1
+tags="autodeploy, kmc_v5.16.8, kmc_template_uiconf_for_appstudio"
+status=2
+displayInSearch=1
+creationMode=3
+confFile=@ui_conf/8776542.xml
+confFileFeatures=@ui_conf/8776542.features.xml
+
+
+[8700151]
+id=8700151
+objType=8
+partnerId=0
+name="Share target"
+width=500
+height=300
+swfUrl=/flash/kdp3/v3.8/kdp3.swf
+html5Url=/html5/html5lib/v2.1.1/mwEmbedLoader.php
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+confFile=@ui_conf/8700151.xml
