set "enableLanguageMenu = true" to enable localisation menu feature

--- a/configurations/base.ini
+++ b/configurations/base.ini
@@ -39,7 +39,7 @@ ignore_cdl_failure = false
 			
 priority_time_range = 600
 
-enableLanguageMenu = false
+enableLanguageMenu = true
 
 ; the max allowed time that will be used to calculate dates that are relative to current time
 max_relative_time = 315360000 ; 10 years
