New partner permissions fixing PLAT-1320 Hybrid eCDN partner has no permissions to use the liveConversionProfile->serve action

--- a/deployment/permissions/partner.0.ini
+++ b/deployment/permissions/partner.0.ini
@@ -1249,3 +1249,12 @@ permission193.type = 1
 permission193.name = LIVE_STREAM_CREATE_SYNC_POINTS
 permission193.friendlyName = "Create live stream sync-points"
 permission193.description = "Create live stream sync-points"
+
+permission194.partnerId = 0
+permission194.type = 1
+permission194.name = ALWAYS_ALLOWED_PERMISSION_HYBRID_ECDN
+permission194.friendlyName = "Media Server partner-level permission"
+permission194.description = "Media Server partner-level permission"
+permission194.dependsOnPermissionNames = FEATURE_HYBRID_ECDN
+permission194.tags = 
+permission194.partnerGroup =
