--- a/deployment/permissions/service.wowza.liveconversionprofile.ini
+++ b/deployment/permissions/service.wowza.liveconversionprofile.ini
@@ -6,5 +6,5 @@ permissionItem1.param3 =
 permissionItem1.param4 = 
 permissionItem1.param5 = 
 permissionItem1.tags = 
-permissionItem1.permissions = ALWAYS_ALLOWED_FROM_INTERNAL_IP_ACTIONS
+permissionItem1.permissions = ALWAYS_ALLOWED_FROM_INTERNAL_IP_ACTIONS,ALWAYS_ALLOWED_PERMISSION_HYBRID_ECDN
 
