--- a/deployment/permissions/service.cuepoint.cuepoint.ini
+++ b/deployment/permissions/service.cuepoint.cuepoint.ini
@@ -24,7 +24,7 @@ permissionItem3.param3 =
 permissionItem3.param4 = 
 permissionItem3.param5 = 
 permissionItem3.tags = 
-permissionItem3.permissions = CONTENT_MANAGE_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
+permissionItem3.permissions = CONTENT_MODERATE_BASE, CONTENT_MANAGE_BASE, -1>PARTNER_-1_GROUP_*_PERMISSION, BASE_USER_SESSION_PERMISSION, WIDGET_SESSION_PERMISSION
 
 permissionItem4.service = cuepoint_cuepoint
 permissionItem4.action = delete
