--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -143,6 +143,14 @@ moduls.liveChannel.basePermissionType =
 moduls.liveChannel.basePermissionName =
 moduls.liveChannel.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.kalturaLiveMonitor.enabled = true
+moduls.kalturaLiveMonitor.permissionType = 2
+moduls.kalturaLiveMonitor.label = Kaltura Live - Monitor
+moduls.kalturaLiveMonitor.permissionName = FEATURE_KALTURA_LIVE_MONITOR
+moduls.kalturaLiveMonitor.basePermissionType = 2, 3, 3
+moduls.kalturaLiveMonitor.basePermissionName = FEATURE_LIVE_STREAM, METADATA_PLUGIN_PERMISSION, EVENTNOTIFICATION_PLUGIN_PERMISSION
+moduls.kalturaLiveMonitor.group = GROUP_ENABLE_DISABLE_FEATURES
+
 moduls.vast.enabled = true
 moduls.vast.permissionType = 2
 moduls.vast.label = Advertising
