Enable no-session role for always allowed action PLAT-1391 #time 1h

--- a/deployment/base/scripts/init_data/03.UserRole.ini
+++ b/deployment/base/scripts/init_data/03.UserRole.ini
@@ -22,6 +22,17 @@ permissionNames="*"
 tags="kmc,partner_admin"
 
 
+[NO_SESSION_ROLE]
+id=3
+strId=NO_SESSION_ROLE
+name="No Session"
+systemName="No Session"
+description="Only always allowed actions"
+partnerId=0
+status=1
+permissionNames="ALWAYS_ALLOWED_ACTIONS,ALWAYS_ALLOWED_PERMISSION_HYBRID_ECDN"
+
+
 [BULK_LOG_VIEWER]
 id=11
 strId=BULK_LOG_VIEWER
