Event cue point first draft (Shouldn't be working yet...)

--- a/configurations/plugins.template.ini
+++ b/configurations/plugins.template.ini
@@ -29,6 +29,7 @@ CuePoint
 CuePointSphinx
 CuePointMetadata
 CuePointBulkUploadXml
+EventCuePoint
 AdCuePoint
 AdCuePointMetadata
 AdCuePointBulkUploadXml
