Required changes to configuration and added thrown exception

--- a/configurations/broadcast.template.ini
+++ b/configurations/broadcast.template.ini
@@ -3,10 +3,12 @@ domain = @KALTURA_FULL_VIRTUAL_HOST_NAME@
 
 [0]
 domain = @PRIMARY_MEDIA_SERVER_HOST@
-application = kLive
+application.default = kLive
+application.LIVE_STREAM_ONTEXTDATA_CAPTIONS=kLiveOTD
 
 
 [1]
 domain = @SECONDARY_MEDIA_SERVER_HOST@
-application = kLive
+application.default = kLive
+application.LIVE_STREAM_ONTEXTDATA_CAPTIONS=kLiveOTD
 
