--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -692,6 +692,22 @@ moduls.pushPublish.basePermissionType = 2
 moduls.pushPublish.basePermissionName = FEATURE_HYBRID_ECDN
 moduls.pushPublish.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.tvinciIngestV1.enabled = true
+moduls.tvinciIngestV1.permissionType = 2
+moduls.tvinciIngestV1.label = Enable Tvinci Ingest v1
+moduls.tvinciIngestV1.permissionName = FEATURE_TVINCI_INGEST_V1
+moduls.tvinciIngestV1.basePermissionType =
+moduls.tvinciIngestV1.basePermissionName =
+moduls.tvinciIngestV1.group = GROUP_ENABLE_DISABLE_FEATURES
+
+moduls.tvinciIngestV2.enabled = true
+moduls.tvinciIngestV2.permissionType = 2
+moduls.tvinciIngestV2.label = Enable Tvinci Ingest v2
+moduls.tvinciIngestV2.permissionName = FEATURE_TVINCI_INGEST_V2
+moduls.tvinciIngestV2.basePermissionType =
+moduls.tvinciIngestV2.basePermissionName =
+moduls.tvinciIngestV2.group = GROUP_ENABLE_DISABLE_FEATURES
+
 moduls.blockThumbnailCapture.enabled = true
 moduls.blockThumbnailCapture.permissionType = 2
 moduls.blockThumbnailCapture.label = Block thumbnail capture
