Fix issue caused during the on-prem installation @HOST_NAME@ is an unknown token in the installation process

--- a/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiHttp.template.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiHttp.template.ini
@@ -8,4 +8,4 @@ description="Default HTTP Delivery Profile"
 streamerType=http
 isDefault=1
 parentId=0
-url="http://@HOST_NAME@"
+url="http://@WWW_HOST@"
