--- a/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiAppleHttp.template.ini
+++ b/deployment/base/scripts/init_data/07.DeliveryProfileAkamaiAppleHttp.template.ini
@@ -8,4 +8,4 @@ description="Default Akamai HLS direct"
 streamerType=applehttp
 isDefault=1
 parentId=0
-url="http://@HOST_NAME@"
+url="http://@WWW_HOST@"
