--- a/configurations/batch/scheduler.conf.template
+++ b/configurations/batch/scheduler.conf.template
@@ -1,3 +1,3 @@
 
-[@INSTALLED_HOSNAME@ : @BATCH_SCHEDULER_TEMPLATE@]
+[@INSTALLED_HOSTNAME@ : @BATCH_SCHEDULER_TEMPLATE@]
 id	= @BATCH_SCHEDULER_ID@
