Added new uiconfs required for support of applications in on-prem

--- a/deployment/base/scripts/init_data/03.uiConf.ini
+++ b/deployment/base/scripts/init_data/03.uiConf.ini
@@ -1958,12 +1958,28 @@ creationMode=3
 version=1
 confFile=@ui_conf/14281801.xml
 
-[14645151]
-id=14645151	
+[14536831]
+id=14536831	
 objType=19
 partnerId=0
 name="Default KSR UIConf for D2L"
 swfUrl="/flash/ksr/v1.0.43/ScreencastOMaticRun-1.0.43.jar"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14645151.xml
+
+[14645151]
+id=14645151
+objType=1
+partnerId=0
+name="Desire2Learn - Default Audio Player"
+width=500
+height=84
+swfUrl="/flash/kdp3/v3.8.4/kdp3.swf"
+html5Url=/html5/html5lib/v1.8.4/mwEmbedLoader.php
 useCdn=1
 status=2
 displayInSearch=2
