Error during DWH sanity testing due to undefined token

--- a/tests/sanity/lib/config.template.ini
+++ b/tests/sanity/lib/config.template.ini
@@ -27,7 +27,7 @@ logRotateBin				= @LOG_ROTATE_BIN@
 kitchenScript                           = @KITCHEN_BIN@
 
 [adminConsoleSession]
-partnerId				= @ADMIN_CONSOLE_PARTNER_ID@
+partnerId				= -2
 adminSecret                             = @ADMIN_CONSOLE_PARTNER_ADMIN_SECRET@
 
 
