Webex drop folder feature missing from on-prem installations

--- a/configurations/admin.template.ini
+++ b/configurations/admin.template.ini
@@ -716,6 +716,14 @@ moduls.blockThumbnailCapture.basePermissionType =
 moduls.blockThumbnailCapture.basePermissionName =
 moduls.blockThumbnailCapture.group = GROUP_ENABLE_DISABLE_FEATURES
 
+moduls.webexDropFolder.enabled = true
+moduls.webexDropFolder.permissionType = 2
+moduls.webexDropFolder.label = Webex Drop Folder
+moduls.webexDropFolder.permissionName = WEBEXDROPFOLDER_PLUGIN_PERMISSION
+moduls.webexDropFolder.basePermissionType = 
+moduls.webexDropFolder.basePermissionName = DROPFOLDER_PLUGIN_PERMISSION
+moduls.webexDropFolder.group = GROUP_ENABLE_DISABLE_FEATURES
+
 
 ; ACCESS PERMISSIONS
 
