Chnages required for on-prem

--- a/deployment/base/scripts/init_data/03.uiConf.ini
+++ b/deployment/base/scripts/init_data/03.uiConf.ini
@@ -1944,3 +1944,260 @@ status=2
 displayInSearch=2
 creationMode=3
 confFile=@ui_conf/8700151.xml
+
+[14281801]
+id=14281801
+objType=20
+partnerId=0
+name="Default KUpload UIConf for D2L"
+swfUrl="/flash/kupload/v1.2.9/KUpload.swf"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14281801.xml
+
+[14536831]
+id=14536831	
+objType=19
+partnerId=0
+name="Default KSR UIConf for D2L"
+swfUrl="/flash/ksr/v1.0.43/ScreencastOMaticRun-1.0.43.jar"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14645151.xml
+
+[14645151]
+id=14645151
+objType=1
+partnerId=0
+name="Desire2Learn - Default Audio Player"
+width=500
+height=84
+swfUrl="/flash/kdp3/v3.8.4/kdp3.swf"
+html5Url=/html5/html5lib/v1.8.4/mwEmbedLoader.php
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14645151.xml
+
+[5651871]
+id=5651871
+objType=2
+partnerId=0
+name="KCW for D2L"
+swfUrl="/flash/kcw/v2.1.6.7.3/ContributionWizard.swf"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5651871.xml
+
+[5695532]
+id=5695532
+objType=1
+partnerId=0
+name="Desire2Learn - Default Audio Player"
+width=400
+height=100
+swfUrl="/flash/kdp3/v3.6.16/kdp3.swf"
+html5Url=/html5/html5lib/v1.6.12.27i/mwEmbedLoader.php
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5695532.xml
+
+[5697302]
+id=5697302
+objType=2
+partnerId=0
+name="Desire2Learn - Default Kaltura Contribution Wizard"
+swfUrl="/flash/kcw/v2.1.6.7.3/ContributionWizard.swf"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5697302.xml
+
+[9313421]
+id=9313421
+partnerId=0
+objType=2
+name="Desire2Learn - Default Kaltura Contribution Wizard"
+swfUrl="/flash/kcw/v2.1.6.7.3/ContributionWizard.swf"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/9313421.xml
+
+[23448121]
+id=23448121
+partnerId=0
+objType=2
+name="Desire2Learn - Default Kaltura Contribution Wizard - duplicate"
+swfUrl="/flash/kcw/v2.2.5/ContributionWizard.swf"
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/23448121.xml
+
+[5259492]
+id=5259492
+partnerId=0
+objType=8
+name="Desire2Learn - Default Player for Search"
+swfUrl=/flash/kdp3/v3.5.17.6/kdp3.swf
+html5Url=/html5/html5lib/v1.6.12.27i/mwEmbedLoader.php
+tags=kdp3,player
+width=128
+height=102
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5259492.xml
+
+[5753551]
+id=5753551
+partnerId=0
+objType=8
+name="D2L 508 player with Akamai HD support"
+swfUrl=/flash/kdp3/v3.5.17.6/kdp3.swf
+html5Url=/html5/html5lib/v1.6.12.27i/mwEmbedLoader.php
+tags=kdp3,player
+width=500
+height=500
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5753551.xml
+
+[5735232]
+id=5735232
+objType=8
+partnerId=0
+name="Desire2Learn - Default 508 Player"
+swfUrl=/flash/kdp3/v3.5.17.6/kdp3.swf
+html5Url=/html5/html5lib/v1.8.9/mwEmbedLoader.php
+width=500
+height=500
+tags=kdp508
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/5735232.xml
+
+[14645131]
+id=14645131
+objType=8
+partnerId=0
+name="Desire2Learn - Default 508 Player"
+width=500
+height=500
+swfUrl=/flash/kdp3/v3.8.4/kdp3.swf
+html5Url=/html5/html5lib/v1.8.2/mwEmbedLoader.php
+tags=kdp508
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14645131.xml
+
+
+[15333782]
+id=15333782
+objType=2
+partnerId=0
+name="Default KCW for WordPress Admin"
+swfUrl=/flash/kcw/v2.1.6.7/ContributionWizard.swf
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/15333782.xml
+
+[15333792]
+id=15333792
+partnerId=0
+objType=2
+name="Default KCW for WordPress Comments"
+swfUrl=/flash/kcw/v2.1.6.7/ContributionWizard.swf
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/15333792.xml
+
+[14969192]
+id=14969192
+objType=1
+partnerId=0
+name="WordPress v2.5 Thumbnail Player"
+width=400
+height=330
+swfUrl=/flash/kdp3/v3.8.5/kdp3.swf
+html5Url=/html5/html5lib/v1.8.5/mwEmbedLoader.php
+tags=kdp3,player
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/14969192.xml
+
+[11958362]
+id=11958362
+partnerId=0
+objType=8
+name="KDP3 Light skin"
+width=400
+height=330
+swfUrl=/flash/kdp3/v3.6.17/kdp3.swf
+html5Url=/html5/html5lib/v1.7.2/mwEmbedLoader.php
+tags=autodeploy, kmc_v5.31.1, kmc_previewembed
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/11958362.xml
+
+[11958342]
+id=11958342
+objType=8
+partnerId=0
+name="KDP3 Dark skin"
+width=400
+height=330
+swfUrl=/flash/kdp3/v3.6.17/kdp3.swf
+html5Url=/html5/html5lib/v1.7.2/mwEmbedLoader.php
+tags=autodeploy, kmc_v5.31.1, kmc_previewembed
+useCdn=1
+status=2
+displayInSearch=2
+creationMode=3
+version=1
+confFile=@ui_conf/11958342.xml
+
